--- a/content/docs/guides/plugin-development-linking.mdx
+++ b/content/docs/guides/plugin-development-linking.mdx
@@ -139,7 +139,7 @@ The monorepo automatically handles linking through:
 
 1. **Create Plugin from Template**
    ```bash
-   elizaos create -t plugin myservice
+   elizaos create myservice --type plugin
    cd plugin-myservice
    ```
 
